# onemin

./: .env.example  .gitignore  LICENSE  README.md  config.json.example  pyproject.toml
minautoyt/: __init__.py  cli.py  config.py  metadata.py  pipeline.py  thumbnail.py
onemin/: __init__.py  analyzer.py  approval.py  cli.py  config.py  metadata.py  pipeline.py  thumbnail.py  uploader.py  watcher.py
